--- a/plz-suche/index.html
+++ b/plz-suche/index.html
@@ -24,6 +24,9 @@
                     <section id="search-result" style="max-height: 300px; overflow-y: auto;">
                         <h3><span class="glyphicon glyphicon-hourglass"></span> Suche wird vorbereitet...</h3>
                     </section>
+                    <div class="text-right">
+                        Quelle: <a href="http://www.suche-postleitzahl.org">suche-postleitzahl.org</a>
+                    </div>
                 </div>
             </div>
         </div>
