--- a/plz-suche/index.html
+++ b/plz-suche/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PLZ-Suche Ajax - Javascript Postleitzahlen Widget</title>
+        <title>PLZ-Suche mit HTML &amp; jQuery</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
