--- a/plz-suche/index.html
+++ b/plz-suche/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h1>PLZ Suche mit Ajax (jQuery)</h1>
+                    <h1>PLZ-Suche mit HTML &amp; jQuery</h1>
                     <form id="search-form" class="input-group">
                         <input id="search-query" type="text" class="form-control" autocomplete="off" placeholder="PLZ oder Ort">
                         <span class="input-group-btn">
