--- a/plz-suche/index.html
+++ b/plz-suche/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PLZ-Suche mit HTML &amp; jQuery</title>
+        <title>Postleitzahlensuche mit HTML &amp; jQuery</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h1>PLZ-Suche mit HTML &amp; jQuery</h1>
+                    <h1>PLZ Suche mit HTML &amp; jQuery</h1>
                     <form id="search-form" class="input-group">
                         <input id="search-query" type="text" class="form-control" autocomplete="off" placeholder="PLZ oder Ort">
                         <span class="input-group-btn">
