--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2">
                     <h2>Codebeispiele für die Website</h2>
+                    <h3><span class="glyphicon glyphicon-chevron-right"></span> PLZ Suche mit HTML &amp; jQuery</h3>
+                    <blockquote>
+                        Für Diese <a href="plz-suche/">Postleitzahlensuche</a> benötigen Sie kein PHP/MySQL,
+                        die Suchabfrage findet vollständig clientseitig statt.
+                    </blockquote>
                 </div>                
             </div>
         </div>
