--- a/plz-suche/index.html
+++ b/plz-suche/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h1>PLZ Suche mit HTML &amp; jQuery</h1>
+                    <h2 class="page-header">PLZ Suche mit HTML &amp; jQuery</h2>
                     <form id="search-form" class="input-group">
                         <input id="search-query" type="text" class="form-control" autocomplete="off" placeholder="PLZ oder Ort">
                         <span class="input-group-btn">
@@ -21,10 +21,16 @@
                         </span>
                     </form>
                     <section id="search-result" style="max-height: 300px; overflow-y: auto;">
-                        <h3><span class="glyphicon glyphicon-hourglass"></span> Suche wird vorbereitet...</h3>
+                        <h4><span class="glyphicon glyphicon-hourglass"></span> Suche wird vorbereitet...</h4>
                     </section>
-                    <div class="text-right">
-                        Quelle: <a href="http://www.suche-postleitzahl.org">suche-postleitzahl.org</a>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <a href="https://github.com/plzTeam/web-snippets/tree/master/plz-suche"><span class="glyphicon glyphicon-chevron-left"></span> Infos &amp; Source</a>
+                        </div>
+                        <div class="col-sm-6 text-right">
+                            Quelle: <a href="http://www.suche-postleitzahl.org">suche-postleitzahl.org</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -41,7 +47,7 @@
                         skipEmptyLines: true,
                         complete: function(data) {
                             csvData = data.data;
-                            $('#search-result').html('<h3><span class="glyphicon glyphicon-ok"></span> Bereit für Ihre Suchabfrage</h3>');
+                            $('#search-result').html('<h4><span class="glyphicon glyphicon-ok text-success"></span> Bereit für Ihre Suchabfrage</h4>');
                         }                        
                     };
                     Papa.parse('./data/zuordnung_plz_ort.csv', settings);
@@ -51,7 +57,7 @@
                         event.stopPropagation();
                         var query = $('#search-query').val().toLowerCase();
                         
-                        var table = $('<table class="table table-striped"><thead><tr><th>PLZ</th><th>Ort</th><th>Bundesland</th></tr></thead><tbody></tbody></table>');
+                        var table = $('<table class="table table-striped table-bordered table-hover"><thead><tr><th>PLZ</th><th>Ort</th><th>Bundesland</th></tr></thead><tbody></tbody></table>');
                         $.each(csvData, function(index, value) {
                             // Pattern
                             var pattern_plz         = new RegExp("^" + query + ".*$");
@@ -64,7 +70,7 @@
                                 value.bundesland.toLowerCase().match(pattern_bundesland)
                             ) {
                                 // Tabelle erstellen
-                                $('<tr><td>' + value.plz + '</td><td>' + value.ort + '</td><td>' + value.bundesland + '</td></tr>').appendTo(table.find('tbody'));
+                                $('<tr><td>' + value.plz + '</td><td><a title="Karte ' + value.ort +  '" target="_blank" href="http://www.openstreetmap.org/relation/' + value.osm_id + '"><span class="glyphicon glyphicon-map-marker small"></span> ' + value.ort + '</a></td><td>' + value.bundesland + '</td></tr>').appendTo(table.find('tbody'));
                             }
                         });
                         
