--- a/plz-suche/index.html
+++ b/plz-suche/index.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="./js/papaparse.min.js"></script>
     </head>
-    <body>
+    <body style="background: #fdfdfd;">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
