--- a/plz-suche/index.html
+++ b/plz-suche/index.html
@@ -29,7 +29,7 @@
                             <a href="https://github.com/plzTeam/web-snippets/tree/master/plz-suche"><span class="glyphicon glyphicon-chevron-left"></span> Infos &amp; Source</a>
                         </div>
                         <div class="col-sm-6 text-right">
-                            Quelle: <a href="http://www.suche-postleitzahl.org">suche-postleitzahl.org</a>
+                            Quelle: <a href="https://www.suche-postleitzahl.org">suche-postleitzahl.org</a>
                         </div>
                     </div>
                 </div>
