--- a/plz-karte/index.html
+++ b/plz-karte/index.html
@@ -85,7 +85,7 @@
                             <a href="https://github.com/plzTeam/web-snippets/tree/master/plz-karte"><span class="glyphicon glyphicon-chevron-left"></span> Infos &amp; Source</a>
                         </div>
                         <div class="col-sm-6 text-right">
-                            Quelle: <a href="https://www.suche-postleitzahl.org">suche-postleitzahl.org</a>
+                            Quelle: suche-postleitzahl.org
                         </div>
                     </div>
                 </div>
